--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <section class="card-conteiner">
             <article class="card">
                 <h1 class="card-title">Almohadon matero</h1>
-                <img class="imagen"  src="../imagenes/almohadonmatero.jpeg" alt="matero">
+                <img class="imagen"  src="./imagenes/almohadonmatero.jpeg" alt="matero">
                 <p class="card-description">Son impermeables (algo que todos preguntan) • Rellenos con vellón siliconado para que no pierdan su forma. • Triple sector de apoyo.</p>
              </article>
              <article class="card">
                 <h1  class="card-title">Chau Latas</h1>
-                <img class="imagen" src="../imagenes/chau latas.png" alt="chau-latas">
+                <img class="imagen" src="./imagenes/chau latas.png" alt="chau-latas">
                 <p class="card-description">Ideal para remplazar tus latas de yerba y azúcar, super práctico para transportar en bolso y/o mochila.
                     También se puede guardar un mate grande con su bombilla, es super amplio.</p>
              </article>
              <article class="card">
                 <h1 class="card-title" >Materos</h1>
-                <img class="imagen" src="../imagenes/matero.jpg" alt="materos">
+                <img class="imagen" src="./imagenes/matero.jpg" alt="materos">
                 <p class="card-description">Mochilas Materas: Comodidad y Estilo</p>
             </article>
         </section>
